// ============================================================
// skill_categories / skill_subcategories / skills / skill_evidences
//
// プロフィール（P002）のスキルセット表示で使用するマスタ群。
// 公開/非公開フラグは持たず、登録済みの行はすべて公開対象とする。
// is_coming_soon はカテゴリカードの「準備中」表示（UI 制御）に使う。
// 対応ページ：プロフィール（/about/）、スキル詳細（/about/{slug}/）
// ============================================================

Enum skill_category_slug {
  frontend [note: 'フロントエンド']
  backend [note: 'バックエンド']
  design [note: 'デザイン']
  other [note: 'その他']
}

Enum skill_icon {
  frontend [note: 'フロントエンド用アイコン']
  backend [note: 'バックエンド用アイコン']
  design [note: 'デザイン用アイコン']
  layers [note: 'その他（レイヤー）用アイコン']
}

Table skill_categories {
  id             int                [pk, increment, not null, note: 'ID']
  slug           skill_category_slug [not null, note: 'カテゴリ識別子（URL・SkillIcon キー）']
  title          varchar(255)       [not null, note: '見出し（例: フロントエンド）']
  overview       text               [not null, note: 'カード説明・詳細ページ概要で共通利用する文言']
  icon           skill_icon         [not null, note: 'カードアイコン種別']
  is_coming_soon tinyint(1)         [not null, default: 0, note: '準備中フラグ（0:公開 / 1:準備中。1 のときカードを薄くしリンク非表示）']
  sort_order     int                [not null, default: 0, note: 'カテゴリ表示順（昇順）']
  created_at     timestamp          [not null, default: `CURRENT_TIMESTAMP`]
  updated_at     timestamp          [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    slug [unique, name: 'uq_skill_categories_slug']
    sort_order [name: 'idx_skill_categories_sort_order']
  }

  Note: '''
  スキルカテゴリのマスタ。P002 のカードと P002-01〜04 の詳細ページで共通利用する。

  - slug はサイト URL（/about/{slug}/）と SkillIcon の種別キーを兼ねる。UNIQUE。
  - overview はカードの概要文と詳細ページ冒頭で同一文言を使う。
  - 現状の初期データは 4 件（frontend / backend / design / other）。
  - sort_order 初期値: frontend=1, backend=2, design=3, other=4。
  '''
}

Table skill_subcategories {
  id                int          [pk, increment, not null, note: 'ID']
  skill_category_id int          [not null, note: 'カテゴリID']
  slug              varchar(64)  [not null, note: 'サブカテゴリ識別子（フィルタ・SkillIcon キー。カテゴリ内で一意）']
  label             varchar(255) [not null, note: 'フィルタボタンの表示名']
  sort_order        int          [not null, default: 0, note: 'タブ表示順（昇順）']
  created_at        timestamp    [not null, default: `CURRENT_TIMESTAMP`]
  updated_at        timestamp    [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (skill_category_id, slug) [unique, name: 'uq_skill_subcategories_category_slug']
    (skill_category_id, sort_order) [name: 'idx_skill_subcategories_category_sort']
  }

  Note: '''
  カテゴリ配下のサブカテゴリ（SkillList のフィルタタブ）。

  - slug はカテゴリ内で一意（language は frontend / other で別行として保持）。
  - SkillIcon.vue が slug をキーにアイコンを選ぶため、定義済み slug と一致させる。
  - 現状の初期データは 16 件（4 カテゴリ × 4 サブカテゴリ）。
  '''
}

Table skills {
  id                   int          [pk, increment, not null, note: 'ID']
  skill_category_id    int          [not null, note: 'カテゴリID']
  skill_subcategory_id int          [not null, note: 'サブカテゴリID']
  name                 varchar(255) [not null, note: 'スキル名（見出し）']
  summary              text         [not null, note: 'スキルの説明文']
  level                int          [not null, note: '習熟度（1〜5）', check: `level >= 1 AND level <= 5`]
  sort_order           int          [not null, default: 0, note: 'カテゴリ内の表示順（昇順）']
  created_at           timestamp    [not null, default: `CURRENT_TIMESTAMP`]
  updated_at           timestamp    [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    skill_category_id [name: 'idx_skills_category_id']
    skill_subcategory_id [name: 'idx_skills_subcategory_id']
    (skill_category_id, sort_order) [name: 'idx_skills_category_sort']
  }

  Note: '''
  個別スキル。SkillList で表示する単位（行単位で 1 スキル）。

  - skill_subcategory_id は同一 skill_category_id に属するサブカテゴリのみ許可（アプリ層で検証）。
  - level: 1=入門 〜 5=設計・指導が可能。習熟度ラベルは UI 側で固定保持する。
  - 現状の初期データは 19 件。
  '''
}

Table skill_evidences {
  id         int          [pk, increment, not null, note: 'ID']
  skill_id   int          [not null, note: 'スキルID']
  label      varchar(255) [not null, note: '根拠リンクの表示文言']
  href       varchar(255) [not null, note: '根拠リンク先（同一サイト内の相対パス）']
  sort_order int          [not null, default: 0, note: '同一スキル内の表示順（昇順）']
  created_at timestamp    [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp    [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (skill_id, sort_order) [name: 'idx_skill_evidences_skill_sort']
  }

  Note: '''
  スキルの「根拠」リンク（0..n）。実在する資格・作品ページがある場合のみ付与する。

  - href は同一サイト内の相対パス（例: /works/portfolio/, /certifications/list/）。
  - 現状 evidence を持つスキルは 6 件（Astro / Tailwind CSS / Playwright / AWS / UI/UX 設計 / 生成 AI 活用）。
  '''
}

Ref: skill_subcategories.skill_category_id > skill_categories.id [delete: cascade]
Ref: skills.skill_category_id > skill_categories.id [delete: cascade]
Ref: skills.skill_subcategory_id > skill_subcategories.id [delete: restrict]
Ref: skill_evidences.skill_id > skills.id [delete: cascade]
